
import java.io.*;
/*
 * @author      Marek Kujawa
 * @version     %I%, %G%
 * @since       1.0
 */
package checkin_package;

import checkin_package.*;

public class Flights {
    protected String airline;
    protected String depart;
    protected String destination;
    protected String aircraft;
    protected int capacity;
    protected float max_size;   /*  max allowed size of the laugage */
    protected float max_weight; /*  max allowed weight of the laugage */
}
