@startuml

title __CheckInTerminal's Class Diagram__\n

  namespace CSVGen {
    class CSVGen.CSVGen {
    }
  }
  

  namespace part1 {
    class part1.AllBookings {
    }
  }
  

  namespace part1 {
    class part1.AllFlights {
    }
  }
  

  namespace part1 {
    class part1.Booking {
    }
  }
  

  namespace part1 {
    class part1.CSVReader {
    }
  }
  

  namespace part1 {
    class part1.Flight {
    }
  }
  

  namespace part1 {
    class part1.FlightCheckIn {
    }
  }
  

  namespace part1 {
    class part1.GUI {
    }
  }
  

  namespace part2 {
    class part2.CheckinCounter {
    }
  }
  

  namespace part2 {
    enum Log {
    }
  }
  

  namespace part2 {
    class part2.Main {
    }
  }
  

  namespace part2 {
    class part2.ManagementGUI {
    }
  }
  

  namespace part2 {
    class part2.PassengerQueue {
    }
  }
  

  namespace part2 {
    class part2.SimTime {
    }
  }
  

  namespace part2 {
    interface part2.Subject {
    }
  }
  

  namespace part2 {
    class part2.Timer {
    }
  }
  

  part1.CSVReader o-- part1.AllBookings : bookings
  part1.CSVReader o-- part1.AllFlights : flights
  part1.Flight .up.|> part2.Subject
  part1.GUI o-- part1.AllBookings : bookings
  part1.GUI o-- part1.AllFlights : flights
  part2.CheckinCounter .up.|> part2.Subject
  part2.CheckinCounter o-- part1.AllFlights : flights
  part2.CheckinCounter o-- part1.Booking : passenger
  part2.CheckinCounter o-- part1.Flight : passengerFlight
  part2.CheckinCounter o-- part2.PassengerQueue : queue
  part2.CheckinCounter o-- part2.Timer : timer
  part2.ManagementGUI .up.|> java.util.Observer
  part2.ManagementGUI .up.|> javax.swing.event.ChangeListener
  part2.ManagementGUI o-- part2.SimTime : t
  part2.PassengerQueue .up.|> part2.Subject
  part2.PassengerQueue o-- part2.Timer : timer
  part2.Timer .up.|> part2.Subject
  part2.Timer o-- part2.SimTime : simTime
  part1.AllBookings "1 " o-- "1..* " part1.Booking
  part1.AllFlights "1 " o-- "1..* " part1.Flight


@enduml
